--- a/blog.html
+++ b/blog.html
@@ -4,14 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/master.css">
-    <title>Fupi</title>
+    <title>Fupi | Blog</title>
   </head>
   <body>
-    <header>
-      <div class='container'>
-        <img src="img/Logo.png" alt="Fupi">
-        <a href="blog.html">Blog</a>
-      </div>
-    </header>
+    <ul>
+      <li><a href="blog/post1.html">Post 1</a></li>
+      <li><a href="blog/post2.html">Post 2</a></li>
+    </ul>
   </body>
 </html>
