--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Fupi</title>
   </head>
   <body>
     <header>
       <div class='container'>
-        <img src="img/Logo.png" alt="Fupi">
-        <a href="blog.html">Blog</a>
+        <a href="index.html"><img src="img/LogoSmall.png" alt="Fupi" onmouseover="this.src='img/Logo.png'" onmouseout="this.src='img/LogoSmall.png'"></a>
+        <nav>
+          <a href="sobre.html">Sobre</a>
+          <a href="projetos.html">Projetos</a>
+          <a href="blog.html">Blog</a>
+        </nav>
       </div>
+
     </header>
   </body>
 </html>
