--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/master.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#6e438d">
+    <meta name="apple-mobile-web-app-title" content="Fupi">
+    <meta name="application-name" content="Fupi">
+    <meta name="msapplication-TileColor" content="#603cba">
+    <meta name="theme-color" content="#6e438d">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Fupi</title>
   </head>
@@ -17,7 +28,6 @@
           <a href="blog.html">Blog</a>
         </nav>
       </div>
-
     </header>
   </body>
 </html>
