--- a/index.html
+++ b/index.html
@@ -29,5 +29,16 @@
         </nav>
       </div>
     </header>
+
+    <section id='landing'>
+      <div class="container">
+        <div id="destaque">
+          <h1>Projeto em Destaque</h1>
+        </div>
+        <div id="scratch-recente">
+          <h1>Projeto do Scratch mais Recente</h1>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
