--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6e438d">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Fupi</title>
   </head>
   <body>
@@ -29,6 +28,12 @@
         </nav>
       </div>
     </header>
+    <section id="news" onload="checkCookie('news1')">
+      <div class="container">
+        <p><b>Notícias:</b> O site foi criado!</p>
+        <button type="button" name="close" onclick="setCookie('news1', 'true'); document.getElementById('news').id = 'closed-news';">X</button>
+      </div>
+    </section>
     <section id='landing'>
       <div class="container">
         <div id="destaque">
@@ -40,4 +45,33 @@
       </div>
     </section>
   </body>
+
+  <script>
+    function setCookie(cname,cvalue) {
+        document.cookie = cname + "=" + cvalue + ";path=/";
+      }
+
+    function getCookie(cname) {
+      var name = cname + "=";
+      var decodedCookie = decodeURIComponent(document.cookie);
+      var ca = decodedCookie.split(';');
+      for(var i = 0; i < ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) == ' ') {
+          c = c.substring(1);
+        }
+        if (c.indexOf(name) == 0) {
+          return c.substring(name.length, c.length);
+        }
+      }
+      return "";
+    }
+
+    function checkNews(cname) {
+      var news=getCookie(cname);
+      if (news != "") {
+        document.getElementById('news').id = 'closed-news';
+      }
+    }
+  </script>
 </html>
