--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
       </div>
     </header>
-    <section id="news" onload="checkCookie('news1')">
+    <section id="news" onload="checkCookie('news1');">
       <div class="container">
         <p><b>Notícias:</b> O site foi criado!</p>
         <button type="button" name="close" onclick="setCookie('news1', 'true'); document.getElementById('news').id = 'closed-news';">X</button>
