--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       var section = document.getElementById('news')
       if (news != "") {
         section.id = 'closed-news';
+        alert('This ran.');
       }
     }
   </script>
