--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     function checkNews(cname) {
       var news = getCookie(cname);
-      var section = document.getElementById('news')
+      var section = document.getElementById('news');
       if (news != "") {
         section.id = 'closed-news';
         alert('This ran.');
