Acho que resolvi agora.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <title>Fupi</title>
   </head>
-  <body onload="checkCookie('news1');">
+  <body>
     <header>
       <div class='container'>
         <a href="index.html"><img src="img/LogoSmall.png" alt="Fupi" onmouseover="this.src='img/Logo.png'" onmouseout="this.src='img/LogoSmall.png'"></a>
@@ -28,7 +28,7 @@
         </nav>
       </div>
     </header>
-    <section id="news">
+    <section id="news" onload="checkNews('news1');">
       <div class="container">
         <p><b>Notícias:</b> O site foi criado!</p>
         <button type="button" name="close" onclick="setCookie('news1', 'true'); document.getElementById('news').id = 'closed-news';">X</button>
@@ -72,7 +72,6 @@
       var section = document.getElementById('news');
       if (news != "") {
         section.id = 'closed-news';
-        alert('This ran.');
       }
     }
   </script>
