--- a/blog.html
+++ b/blog.html
@@ -4,12 +4,38 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/master.css">
-    <title>Fupi | Blog</title>
+
+    <meta name="description" content="Eu crio jogos e outras coisas.">
+    <meta name="keywords" content="fupi, fupicat, fupi437, scratch, godot, engine, html5, online, jogos, games, sz, scratcherz, música, royalty-free, public domain">
+    <meta name="author" content="Fupi">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#6e438d">
+    <meta name="apple-mobile-web-app-title" content="Fupi">
+    <meta name="application-name" content="Fupi">
+    <meta name="msapplication-TileColor" content="#603cba">
+    <meta name="theme-color" content="#6e438d">
+
+    <title>Fupi</title>
   </head>
-  <body>
-    <ul>
-      <li><a href="blog/post1.html">Post 1</a></li>
-      <li><a href="blog/post2.html">Post 2</a></li>
-    </ul>
+  <body onload="checkNews('news2');"> <!-- News !-->
+
+    <header>
+      <div class='container'>
+        <a href="index.html"><img src="img/LogoSmall.png" alt="Fupi" onmouseover="this.src='img/Logo.png'" onmouseout="this.src='img/LogoSmall.png'"></a>
+        <nav>
+          <a href="sobre.html">Sobre</a>
+          <a href="projetos.html">Projetos</a>
+          <a href="blog.html">Blog</a>
+        </nav>
+      </div>
+    </header>
+    <section id='blog'>
+      <object type="text/html" data="https://fupiblog.blogspot.com">
+      </object>
+    </section>
   </body>
 </html>
