--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav>
           <a href="sobre.html">Sobre</a>
           <a href="projetos.html">Projetos</a>
-          <a href="blog.html">Blog</a>
+          <a href="https://fupiblog.blogspot.com">Blog</a>
         </nav>
       </div>
     </header>
