--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
 
     <section id='landing'>
       <div class="container">
-        <div class='box' id="destaque">
+        <div class='box'>
           <h1>Projeto em Destaque</h1>
           <img src="img/crie sua dança.png" alt="Crie sua dança">
           <p>Crie sua Dança</p>
+        </div>
+        <div id='intro'>
+          <h1>Olá!</h1>
+          <p>Este site ainda está em construção.</p>
         </div>
       </div>
     </section>
