--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h1>Coisas em Destaque</h1>
         <div class="grid">
 
-          <a href="projetos/SZ.html">
+          <a href="https://github.com/Fupicat/sz">
             <div class='grid-item' style='background: url(img/Fundos/Estrelas.png); background-size: 100%; color: #fff;'>
               <img src="img/Projetos/SZ.png" alt="Logo do SZ">
               <div class="info">
@@ -88,27 +88,33 @@
               </div>
             </div>
           </a>
-          <div class='grid-item' style='background: #a0b1e1; color: #000;'>
-            <img src="img/Projetos/ScratchCat3D.png" alt="Scratch Cat 3D">
-            <div class="info">
-              <h1>Modelo 3D do Scratch Cat</h1>
-              <p>Um modelo 3D que eu fiz, baseado no mascote do Scratch.</p>
+          <a href="https://scratch.mit.edu/projects/357731094/embed">
+            <div class='grid-item' style='background: #a0b1e1; color: #000;'>
+              <img src="img/Projetos/ScratchCat3D.png" alt="Scratch Cat 3D">
+              <div class="info">
+                <h1>Modelo 3D do Scratch Cat</h1>
+                <p>Um modelo 3D que eu fiz, baseado no mascote do Scratch.</p>
+              </div>
             </div>
-          </div>
-          <div class='grid-item' style="background: #555; color: #fff;">
-            <img src="img/Projetos/Fupalito.svg" alt="Fupicat Palito">
-            <div class="info">
-              <h1>Mundo dos Palitos</h1>
-              <p>Uma série colaborativa no Scratch da qual estou participando! Fomos transportados a um mundo de stickmans.</p>
+          </a>
+          <a href="https://scratch.mit.edu/studios/25549052/">
+            <div class='grid-item' style="background: #555; color: #fff;">
+              <img src="img/Projetos/Fupalito.svg" alt="Fupicat Palito">
+              <div class="info">
+                <h1>Mundo dos Palitos</h1>
+                <p>Uma série colaborativa no Scratch da qual estou participando! Fomos transportados a um mundo de stickmans.</p>
+              </div>
             </div>
-          </div>
-          <div class='grid-item' style="background: #000; color: #fff;">
-            <img src="img/Projetos/crie sua dança.png" alt="Crie sua Dança">
-            <div class="info">
-              <h1>Crie sua Dança</h1>
-              <p>Um jogo besta onde você pode criar sua própria dança besta.</p>
+          </a>
+          <a href="https://scratch.mit.edu/projects/356472618/embed">
+            <div class='grid-item' style="background: #000; color: #fff;">
+              <img src="img/Projetos/crie sua dança.png" alt="Crie sua Dança">
+              <div class="info">
+                <h1>Crie sua Dança</h1>
+                <p>Um jogo besta onde você pode criar sua própria dança besta.</p>
+              </div>
             </div>
-          </div>
+          </a>
 
         </div>
       </div>
