--- a/projetos/convulsao-simulator.html
+++ b/projetos/convulsao-simulator.html
@@ -20,9 +20,9 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6e438d">
 
-    <title>Fupi &#183; Blind Boom</title>
+    <title>Fupi &#183; Convulsão Simulator</title>
   </head>
-  <body style='background-color: #000'>
+  <body style='background-color: #b56aca'>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
     <header>
       <div class='container'>
@@ -37,34 +37,30 @@
 
     <section class="proj-header">
       <div class="container">
-        <h1 style="color: #fff;">Blind Boom</h1>
+        <h1>Convulsão Simulator</h1>
       </div>
     </section>
 
     <section class='browser-game'>
       <div class="container">
-        <iframe src="https://itch.io/embed-upload/1534919?color=000000" allowfullscreen="" width="640" height="380" frameborder="0"><a href="https://fupi.itch.io/blindboom">Play Blind Boom on itch.io</a></iframe>
-        <p class="warning">Atenção: Jogo APENAS em inglês.</p>
-        <p class="warning">Atenção: Esse jogo foi feito em apenas 3 horas e pode ser muito confuso.</p>
+        <iframe src="https://scratch.mit.edu/projects/360845991/embed" allowtransparency="true" width="1024" height="620" frameborder="0" scrolling="no" allowfullscreen></iframe>
         <div class="grid">
-          <div class="grid-item" style="color: #fff; background-color: #2f2f2f;">
+          <div class="grid-item" style="color: #fff; background-color: #332f93;">
             <div class="info">
               <h1>Instruções</h1>
               <p>Controles: Teclado</p>
-              <p>CAPS LOCK, ESPAÇO e ENTER fazem diversas ações no jogo.</p>
-              <p>O cara do jogo vai te falar EM INGLÊS o que você tem que fazer.</p>
+              <p>Aperte K o mais rápido possível.</p>
             </div>
           </div>
-          <div class="grid-item" style="color: #fff; background-color: #2f2f2f;">
+          <div class="grid-item" style="color: #fff; background-color: #332f93;">
             <div class="info">
               <h1>Sobre</h1>
-              <p>Este jogo foi criado para a game jam Trijam, onde eu tinha 3 horas para fazer um jogo.</p>
-              <p>O tema era 'sem gráficos', então eu fiz um jogo que funciona só com som.</p>
-              <p>Fiquei em 3º lugar de 8 participantes.</p>
-              <p>Lançado em 12 de julho de 2019.</p>
+              <p>Este jogo foi criado para a [B]aze Jam, uma jam do Scratch.</p>
+              <p>O tema era simulador então eu desisti completamente.</p>
+              <p>Lançado em 19 de janeiro de 2020.</p>
               <h1>Links</h1>
-              <p><a href="https://fupi.itch.io/blindboom" style="color: #a4a4a4">Página no Itch</a></p>
-              <p><a href="https://itch.io/jam/trijam-27/rate/449761" style="color: #a4a4a4">Página da jam</a></p>
+              <p><a href="https://scratch.mit.edu/projects/360845991/" style="color: #c2bff9">Página no Scratch</a></p>
+              <p><a href="https://scratch.mit.edu/studios/25368944/" style="color: #c2bff9">Estúdio da Jam</a></p>
             </div>
           </div>
         </div>
