Mobile image height fix + inkscape

--- a/sobre.html
+++ b/sobre.html
@@ -57,6 +57,7 @@
         <ul>
           <li><a href="https://godotengine.org/">Godot Engine</a> (para fazer jogos)</li>
           <li><a href="https://krita.org/">Krita</a> (para fazer gráficos e edição de imagem)</li>
+          <li><a href="https://inkscape.org/">Inkscape</a> (para fazer gráficos em vetorial, por exemplo meu logo)</li>
           <li><a href="https://kdenlive.org/">Kdenlive</a> (editor de vídeo)</li>
           <li><a href="https://blender.org">Blender</a> (programa de modelagem 3D que eu uso pra fazer modelos 3D e edição de vídeo às vezes)</li>
           <li><a href="https://www.audacityteam.org/">Audacity</a> (editor de áudio que eu uso pra muitas <i>coisas</i>)</li>
