--- a/sobre.html
+++ b/sobre.html
@@ -39,7 +39,7 @@
       <div class="container">
 
         <h1>Sobre</h1>
-        <img src="img/Eu.png" alt="Eu" title="oi" style="float: right; width: 15em;">
+        <img class="img-right" src="img/Eu.png" alt="Eu" title="oi" style="width: 15em;">
         <p>Olá, eu sou o Fupi. Eu faço <i>coisas</i> na internet desde 2013, e este site vai servir para eu mostrá-las. Você encontrará vários tipos de <i>coisas</i> aqui, como por exemplo:</p>
         <ul>
           <li>Jogos</li>
