--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h1>Coisas em Destaque</h1>
         <div class="grid">
 
-          <a href="https://github.com/Fupicat/sz">
+          <a href="projetos/sz.html">
             <div class='grid-item' style='background: url(img/Fundos/Estrelas.png); background-size: 100%; color: #fff;'>
               <img src="img/Projetos/SZ.png" alt="Logo do SZ">
               <div class="info">
