--- a/projetos.html
+++ b/projetos.html
@@ -107,6 +107,37 @@
       </div>
     </section>
 
+    <section class='projects-section' id='unfinished'>
+      <div class="container">
+        <div class="projects-header" onclick="if (document.getElementById('grid-unfinished').style.display == 'none') { document.getElementById('grid-unfinished').style.display = 'grid'; } else { document.getElementById('grid-unfinished').style.display = 'none';}">
+          <h1>Não Terminados</h1>
+        </div>
+        <div class="grid" id='grid-unfinished' style='grid-template-columns: auto auto;'>
+
+          <a href="projetos/sz.html">
+            <div class="grid-item">
+              <img src="img/Projetos/SZ.png" alt="SZ">
+              <div class="info">
+                <h1>SZ</h1>
+                <p>Um simulador de vida ainda em desenvolvimento.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="projetos/mundo-dos-palitos.html">
+            <div class="grid-item">
+              <img src="img/Projetos/Fupalito.svg" alt="Mundo dos Palitos">
+              <div class="info">
+                <h1>Mundo dos Palitos</h1>
+                <p>Série de animação onde viramos stickmen!</p>
+              </div>
+            </div>
+          </a>
+
+        </div>
+      </div>
+    </section>
+
     <footer>
       <div class="container">
         <p>
