--- a/sobre.html
+++ b/sobre.html
@@ -47,7 +47,7 @@
           <li>Músicas</li>
           <li>Projetos não terminados</li>
           <li>Tutoriais</li>
-          <li>Qualquer outra coisa que eu tiver vontade de postar</li>
+          <li>Qualquer outra <i>coisa</i> que eu tiver vontade de postar</li>
         </ul>
         <p>Eu vou atualizar esse site quando eu puder. A maioria dos meus jogos novos são feitos para game jams (competições de criação de jogos), especificamente a Ludum Dare e a GMTK Jam, então você pode esperar que jogos novos sejam postados em abril, agosto, e outubro.</p>
         <p>A maioria das minhas <i>coisas</i> são postadas também no <a href="https://scratch.mit.edu/users/Fupicat">Scratch</a> e <a href="https://twitter.com/Fupicat_BR">Twitter</a>, porque lá tem uma comunidade maior e mais gente vendo. Então se você quer saber quando eu faço alguma <i>coisa</i> você devia checar meus perfis lá também.</p>
@@ -65,12 +65,12 @@
           <li><a href="https://atom.io/">Atom</a> (editor de texto que eu usei pra fazer esse site)</li>
           <li><a href="https://www.mozilla.org/en-US/firefox/developer/">Firefox Dev</a> (navegador que foi bem útil na criação desse site, ele tem um inspetor de elemento muito completo e até guarda cookies)</li>
           <li><a href="https://vivaldi.com/">Vivaldi</a> (navegador que eu uso normalmente, é o único programa dessa lista que não é open-source mas mesmo assim é sensacional)</li>
-          <li><a href="https://ubuntu-mate.org/">Ubuntu MATE</a> (OS que eu uso no meu PC)</li>
+          <li><a href="https://linuxmint.com/">Linux Mint Cinnamon</a> (OS que eu uso no meu PC)</li>
         </ul>
 
         <h1>Contato</h1>
-        <p>Se você quiser falar comigo, sobre qualquer coisa, você pode me mandar um comentário no <a href="https://scratch.mit.edu/users/Fupicat">Scratch</a>, uma PM no <a href="https://twitter.com/Fupicat_BR">Twitter</a> ou um email (fupicat arroba gmail ponto com), mas é bem mais provável eu te responder se você me enviar um email. Eu não costumo checar muito minhas redes sociais.</p>
-        <p>Esse ano eu vou começar a trabalhar então obviamente vou ter menos tempo pra ficar na internet, mas me envie alguma coisa mesmo assim. Adoro conversar lol, não precisa ser sobre nada em específico.</p>
+        <p>Se você quiser falar comigo, sobre qualquer <i>coisa</i>, você pode me mandar um comentário no <a href="https://scratch.mit.edu/users/Fupicat">Scratch</a>, uma PM no <a href="https://twitter.com/Fupicat_BR">Twitter</a> ou um email (fupicat arroba gmail ponto com), mas é bem mais provável eu te responder se você me enviar um email. Eu não costumo checar muito minhas redes sociais.</p>
+        <p>Esse ano eu vou começar a trabalhar então obviamente vou ter menos tempo pra ficar na internet, mas me envie alguma <i>coisa</i> mesmo assim. Adoro conversar lol, não precisa ser sobre nada em específico.</p>
 
       </div>
     </article>
