--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </div>
             </div>
           </a>
-          <a href="https://scratch.mit.edu/projects/357731094/embed">
+          <a href="projetos/scratch-cat-3d.html">
             <div class='grid-item' style='background: #a0b1e1; color: #000;'>
               <img src="img/Projetos/ScratchCat3D.png" alt="Scratch Cat 3D">
               <div class="info">
