--- a/projetos.html
+++ b/projetos.html
@@ -107,6 +107,28 @@
       </div>
     </section>
 
+    <section class='projects-section' id='art'>
+      <div class="container">
+        <div class="projects-header" onclick="if (document.getElementById('grid-unfinished').style.display == 'none') { document.getElementById('grid-unfinished').style.display = 'grid'; } else { document.getElementById('grid-unfinished').style.display = 'none';}">
+          <img src="img/Arte.png" alt="Arte">
+          <h1>Arte</h1>
+        </div>
+        <div class="grid" id='grid-unfinished' style='grid-template-columns: auto auto auto;'>
+
+          <a href="projetos/scratch-cat-3d.html">
+            <div class="grid-item">
+              <img src="img/Projetos/ScratchCat3D.png" alt="Modelo 3D do Scratch Cat">
+              <div class="info">
+                <h1>Modelo 3D do Scratch Cat</h1>
+                <p>Um modelo 3D do mascote do Scratch.</p>
+              </div>
+            </div>
+          </a>
+
+        </div>
+      </div>
+    </section>
+
     <section class='projects-section' id='unfinished'>
       <div class="container">
         <div class="projects-header" onclick="if (document.getElementById('grid-unfinished').style.display == 'none') { document.getElementById('grid-unfinished').style.display = 'grid'; } else { document.getElementById('grid-unfinished').style.display = 'none';}">
