--- a/projetos/sz.html
+++ b/projetos/sz.html
@@ -45,7 +45,7 @@
       <div class="container">
         <h1>Então...</h1>
         <p>Eu não tenho muito pra te mostrar sobre esse jogo porque ele ainda não está pronto, inclusive está bem longe de estar.</p>
-        <p>Mas se você quiser acompanhar o desenvolvimento, você pode! Estou postando no meu <a href="https://fupiblog.blogspot.com" style="color: #fff; font-weight: bold;">blog</a> todos os dias novidades sobre o jogo, adições, bugfixes e mais.</p>
+        <p>Mas se você quiser acompanhar o desenvolvimento, você pode! Estou postando no meu <a href="https://fupiblog.blogspot.com" style="color: #fff; font-weight: bold;">blog</a> novidades sobre o jogo, adições, bugfixes e mais.</p>
         <p>Esse jogo é pra ser um simulador de vida, inspirado no pouco que eu joguei de The Sims, Animal Crossing e Stardew Valley, mas meu objetivo é fazer algo completamente diferente, como se fosse um RPG de vida. Por enquanto eu já fiz um editor de casa e um sistema de NPCs que ainda é primitivo. Eu trabalho neste jogo todos os dias então o progresso está fluindo consistentemente. Infelizmente com a volta das aulas e do trabalho eu vou ter muito menos tempo para trabalhar no jogo, mas vou tentar manter pelo menos uma rotina de uma atualização por semana.</p>
         <div class="gallery">
           <img src="../img/Artigos/SZHouse.png" alt="Casa no SZ" title="O editor de casa." style="width: 20em;">
