--- a/sobre.html
+++ b/sobre.html
@@ -22,8 +22,8 @@
 
     <title>Fupi &#183; Sobre</title>
   </head>
-  <body onload="checkNews('news2');"> <!-- News !-->
-    <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
+  <body>
+    <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3'
     <header>
       <div class='container'>
         <a href="index.html"><img src="img/LogoSmall.png" alt="Fupi" onmouseover="this.src='img/Logo.png'" onmouseout="this.src='img/LogoSmall.png'"></a>
@@ -34,6 +34,9 @@
         </nav>
       </div>
     </header>
+    !-->
+
+    <!--#include file="navbar.html" -->
 
     <article>
       <div class="container">
@@ -56,16 +59,25 @@
         <h1>O que eu uso</h1>
         <p>Se você quer saber os programas e outras <i>coisas</i> que eu uso, aqui vai uma listinha do que eu consigo lembrar:</p>
         <ul>
-          <li><a href="https://godotengine.org/">Godot Engine</a> (para fazer jogos)</li>
-          <li><a href="https://krita.org/">Krita</a> (para fazer gráficos e edição de imagem)</li>
-          <li><a href="https://inkscape.org/">Inkscape</a> (para fazer gráficos em vetorial, por exemplo meu logo)</li>
-          <li><a href="https://kdenlive.org/">Kdenlive</a> (editor de vídeo)</li>
-          <li><a href="https://blender.org">Blender</a> (programa de modelagem 3D que eu uso pra fazer modelos 3D e edição de vídeo às vezes)</li>
-          <li><a href="https://www.audacityteam.org/">Audacity</a> (editor de áudio que eu uso pra muitas <i>coisas</i>)</li>
-          <li><a href="https://atom.io/">Atom</a> (editor de texto que eu usei pra fazer esse site)</li>
-          <li><a href="https://www.mozilla.org/en-US/firefox/developer/">Firefox Dev</a> (navegador que foi bem útil na criação desse site, ele tem um inspetor de elemento muito completo e até guarda cookies)</li>
-          <li><a href="https://vivaldi.com/">Vivaldi</a> (navegador que eu uso normalmente, é o único programa dessa lista que não é open-source mas mesmo assim é sensacional)</li>
-          <li><a href="https://linuxmint.com/">Linux Mint Cinnamon</a> (OS que eu uso no meu PC)</li>
+          <li><h3>Código aberto</h3></li>
+          <ul>
+            <li><a href="https://godotengine.org/">Godot Engine</a> (para fazer jogos)</li>
+            <li><a href="https://krita.org/">Krita</a> (para fazer gráficos e edição de imagem)</li>
+            <li><a href="https://inkscape.org/">Inkscape</a> (para fazer gráficos em vetorial, por exemplo meu logo)</li>
+            <li><a href="https://blender.org">Blender</a> (programa de modelagem 3D que eu uso pra fazer modelos 3D e edição de vídeo às vezes)</li>
+            <li><a href="https://www.audacityteam.org/">Audacity</a> (editor de áudio que eu uso pra muitas <i>coisas</i>)</li>
+            <li><a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> (navegador que é bem útil na criação de sites, ele tem um inspetor de elemento muito completo e até guarda cookies)</li>
+            <li><a href="https://linuxmint.com/">Linux Mint Cinnamon</a> (OS que eu uso no meu PC)</li>
+          </ul>
+          <li><h3>Grátis</h3></li>
+          <ul>
+            <li><a href="https://code.visualstudio.com/">Visual Studio Code</a> (editor de código que eu usei pra fazer esse site)</li>
+            <li><a href="https://vivaldi.com/">Vivaldi</a> (navegador muito bom pra quem gosta de usar várias abas ao mesmo tempo, super customizável)</li>
+          </ul>
+          <li><h3>Pago</h3></li>
+          <ul>
+            <li><a href="https://store.steampowered.com/app/330070/VEGAS_Movie_Studio_13_Platinum__Steam_Powered/">VEGAS Movie Studio 13 Platinum</a> (editor de vídeo que eu uso que, apesar de ser antigo e só funcionar no Windows, é bom e barato - se você comprar em promoção) (eu queria poder apoiar mais o Kdenlive mas simplesmente não dá, é muito bugado)</li>
+          </ul>
         </ul>
 
         <h1>Contato</h1>
