--- a/sobre.html
+++ b/sobre.html
@@ -36,7 +36,7 @@
     </header>
     !-->
 
-    <!--#include file="navbar.html" -->
+    <header></header>
 
     <article>
       <div class="container">
@@ -99,6 +99,17 @@
         </p>
       </div>
     </footer>
+
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous">
+    </script>
+    <script> 
+      $(function(){
+        $("header").load("navbar.html");
+      });
+    </script> 
 
   </body>
 </html>
