headers + footers everywhere test

--- a/sobre.html
+++ b/sobre.html
@@ -87,29 +87,14 @@
       </div>
     </article>
 
-    <footer>
-      <div class="container">
-        <p>
-        <a href="https://scratch.mit.edu/users/Fupicat/">Scratch</a> &#183;
-        <a href="https://fupi.itch.io">Itch</a> &#183;
-        <a href="https://github.com/Fupicat">GitHub</a> &#183;
-        <a href="https://twitter.com/Fupicat_BR">Twitter</a> &#183;
-        <a href="https://youtube.com/c/fupicat">YouTube</a> &#183;
-        <a href="https://opengameart.org/users/fupi">OpenGameArt</a>
-        </p>
-      </div>
-    </footer>
+    <footer></footer>
 
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous">
     </script>
-    <script> 
-      $(function(){
-        $("header").load("navbar.html");
-      });
-    </script> 
+    <script src="autoload.js"></script>
 
   </body>
 </html>
