header + footer everywhere

--- a/projetos/blind-boom.html
+++ b/projetos/blind-boom.html
@@ -24,16 +24,8 @@
   </head>
   <body style='background-color: #000'>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
-    <header>
-      <div class='container'>
-        <a href="../index.html"><img src="../img/LogoSmall.png" alt="Fupi" onmouseover="this.src='../img/Logo.png'" onmouseout="this.src='../img/LogoSmall.png'"></a>
-        <nav>
-          <a href="../sobre.html">Sobre</a>
-          <a href="../projetos.html">Projetos</a>
-          <a href="https://fupiblog.blogspot.com">Blog</a>
-        </nav>
-      </div>
-    </header>
+    
+    <header></header>
 
     <section class="proj-header">
       <div class="container">
@@ -71,18 +63,13 @@
       </div>
     </section>
 
-    <footer>
-      <div class="container">
-        <p>
-        <a href="https://scratch.mit.edu/users/Fupicat/">Scratch</a> &#183;
-        <a href="https://fupi.itch.io">Itch</a> &#183;
-        <a href="https://github.com/Fupicat">GitHub</a> &#183;
-        <a href="https://twitter.com/Fupicat_BR">Twitter</a> &#183;
-        <a href="https://youtube.com/c/fupicat">YouTube</a> &#183;
-        <a href="https://opengameart.org/users/fupi">OpenGameArt</a>
-        </p>
-      </div>
-    </footer>
+    <footer></footer>
+
+    <script
+			  src="https://code.jquery.com/jquery-3.4.1.min.js"
+			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+			  crossorigin="anonymous"></script>
+    <script src="autoload.js"></script>
 
   </body>
 </html>
