--- a/sobre.html
+++ b/sobre.html
@@ -23,19 +23,8 @@
     <title>Fupi &#183; Sobre</title>
   </head>
   <body>
-    <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3'
-    <header>
-      <div class='container'>
-        <a href="index.html"><img src="img/LogoSmall.png" alt="Fupi" onmouseover="this.src='img/Logo.png'" onmouseout="this.src='img/LogoSmall.png'"></a>
-        <nav>
-          <a href="sobre.html">Sobre</a>
-          <a href="projetos.html">Projetos</a>
-          <a href="https://fupiblog.blogspot.com">Blog</a>
-        </nav>
-      </div>
-    </header>
-    !-->
-
+    <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
+    
     <header></header>
 
     <article>
