--- a/projetos/sz.html
+++ b/projetos/sz.html
@@ -80,7 +80,7 @@
 			  src="https://code.jquery.com/jquery-3.4.1.min.js"
 			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 			  crossorigin="anonymous"></script>
-    <script src="autoload.js"></script>
+    <script src="/autoload.js"></script>
 
   </body>
 </html>
